--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   
 <head>
   <meta charset="utf-8">
-  <title><>
-    </head>ToDo</title>
+  <title>ToDo</title>
+</head>
 <body>
   <div>Hello World!</div>
 </body>
