--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>ToDo</title>
+  <link rel="stylesheet" href="styles/todo.css">
 </head>
+
 <body>
   <div>Hello World!</div>
+
+  <script src="scripts/todo.js"></script>
 </body>
 
-  </html>
+</html>
