--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
   <div>Hello World!</div>
-
+  <div class="button">
+    <button id="button">OK</button>
+  </div>
   <script src="scripts/todo.js"></script>
 </body>
 
